<resources>
    <string name="app_name">Academic Organizer</string>
    <string name="app_logo">Application Logo</string>
    <string name="title_activity_terms">terms</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="view_courses">View Courses</string>
    <string name="view_terms">View Terms</string>
    <string name="view_assessments">View Assessments</string>
    <string name="content">Content</string>
    <string name="placeholder">$placeholder$</string>

    <string name="term_logo">Term Logo</string>
    <string name="terms">Terms</string>
    <string name="term">Term</string>
    <string name="term_add">Add Term</string>

    <string name="course_logo">Course Logo</string>
    <string name="courses">Courses</string>
    <string name="course">Course</string>
    <string name="course_add">Add Course</string>

    <string name="assessment_logo">Assessment Logo</string>
    <string name="assessments">Assessments</string>
    <string name="assessment">Assessment</string>
    <string name="assessment_add">Add Assessment</string>

    <string name="instructor">Instructor</string>
    <string name="instructor_name">Name</string>
    <string name="instructor_email">Email</string>
    <string name="instructor_phone">Phone</string>

    <string name="status">Status</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="remove">Remove</string>
    <string name="insert">Insert</string>
    <string name="due_date">Due Date</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deleteDialog_positive_caption">Delete</string>
    <string name="deleteTermDialog_message">Deleting this term will also delete courses, instructors, and assessments associated with %2$s (id:%1$d)?</string>
    <string name="deleteCourseDialog_message">Deleting this course will also delete assessments and instructors associated with %2$s (id:%1$d)?</string>
    <string name="deleteAssessmentDialog_message">Are you sure you want to delete %2$s (id:%1$d)?</string>

    <string name="setReminderNotification">Set reminder notification</string>
</resources>